--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>net.masterthought</groupId>
     <artifactId>cucumber-reporting</artifactId>
     <packaging>jar</packaging>
-    <version>0.0.24-SNAPSHOT-PP</version>
+    <version>0.0.24-PP-SNAPSHOT</version>
     <name>cucumber-reporting</name>
     <url>https://github.com/masterthought/cucumber-reporting</url>
 
